# inertia-core

./: .gitignore  Cargo.toml  README.md  index.html  notes
Integer-mul/1/report/: index.html
Integer-mul/2/report/: index.html
Integer-mul/4/report/: index.html
Integer-mul/8/report/: index.html
Integer-mul/inertia/1/base/: raw.csv
Integer-mul/inertia/1/new/: benchmark.json  estimates.json  sample.json  tukey.json
Integer-mul/inertia/1/report/: index.html
Integer-mul/inertia/2/base/: raw.csv  sample.json
Integer-mul/inertia/2/new/: benchmark.json  estimates.json  tukey.json
Integer-mul/inertia/2/report/: index.html
Integer-mul/inertia/4/base/: sample.json
Integer-mul/inertia/4/new/: benchmark.json  estimates.json  raw.csv  tukey.json
Integer-mul/inertia/4/report/: index.html
Integer-mul/inertia/8/base/: estimates.json
Integer-mul/inertia/8/new/: benchmark.json  raw.csv  sample.json  tukey.json
Integer-mul/inertia/8/report/: index.html
Integer-mul/inertia/report/: index.html
Integer-mul/num/1/base/: raw.csv  sample.json
Integer-mul/num/1/new/: benchmark.json  estimates.json  tukey.json
Integer-mul/num/1/report/: index.html
Integer-mul/num/2/base/: benchmark.json  estimates.json  sample.json
Integer-mul/num/2/new/: raw.csv  tukey.json
Integer-mul/num/2/report/: index.html
Integer-mul/num/4/base/: benchmark.json  estimates.json
Integer-mul/num/4/new/: raw.csv  (+2 more)
Integer-mul/num/report/: index.html
Integer-mul/report/: index.html
Integer-mul/rug/report/: index.html
benches/: arithmetic.rs
examples/: advanced.rs  basic.rs  binquad.rs  serde.rs  test.rs
src/: binquad.rs  complex.rs  error.rs  finfld.rs  finfldmat.rs  finfldpoly.rs  integer.rs  intmat.rs  intmod.rs  intmodmat.rs  intmodpoly.rs  intmpoly.rs  intpoly.rs  lib.rs  macros.rs  numfld.rs  ops.rs  ratfunc.rs  rational.rs  ratmat.rs  ratpoly.rs  real.rs
src/binquad/: conv.rs
src/complex/: conv.rs  ops.rs
src/finfld/: arith.rs  cmp.rs  conv.rs  mod.rs  ops.rs  src.rs
src/finfldmat/: arith.rs  conv.rs  mod.rs  ops.rs  src.rs
src/finfldpoly/: arith.rs  cmp.rs  conv.rs  mod.rs  ops.rs  src.rs
src/integer/: arith.rs  cmp.rs  conv.rs  macros.rs  mod.rs  ops.rs  serde.rs  src.rs
src/intmat/: arith.rs  cmp.rs  conv.rs  mod.rs  ops.rs  serde.rs  src.rs
src/intmod/: arith.rs  cmp.rs  conv.rs  mod.rs  ops.rs  serde.rs  src.rs
src/intmodmat/: arith.rs  conv.rs  mod.rs  ops.rs  src.rs
src/intmodpoly/: arith.rs  conv.rs  mod.rs  ops.rs  serde.rs  src.rs
src/intmpoly/: arith.rs  conv.rs  mod.rs  src.rs
src/intpoly/: arith.rs  cmp.rs  conv.rs  mod.rs  ops.rs  serde.rs  src.rs
src/ratfunc/: conv.rs  ops.rs
src/rational/: arith.rs  cmp.rs  conv.rs  mod.rs  ops.rs  serde.rs  src.rs
src/ratmat/: arith.rs  conv.rs  mod.rs  ops.rs  serde.rs  src.rs
src/ratpoly/: arith.rs  conv.rs  mod.rs  ops.rs  serde.rs  src.rs
src/real/: arb.rs  arf.rs  conv.rs  mag.rs  ops.rs
src/real/arb/: conv.rs  ops.rs
src/real/arf/: conv.rs
src/real/mag/: conv.rs
(+31 files in other folders)
