[package]
name = "inertia-core"
version = "0.1.4"
edition = "2021"
authors = ["William Youmans <wyoumans@usf.edu>"]
description = "Core functionality of the Inertia crate."
homepage = "https://github.com/wjyoumans/inertia-core"
repository = "https://github.com/wjyoumans/inertia-core"
license = "GPL-3.0-or-later" 
keywords = ["flint", "real", "complex", "number-theory", "math"]
categories = ["algorithms", "external-ffi-bindings", "mathematics"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2" 
flint-sys = {version = "0.6.3", features = ["disable-make-check"] }
arb-sys = {version = "0.3", features = ["disable-make-check"] }
antic-sys = {version = "0.3", features = ["disable-make-check"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bincode = "1.3"
quickcheck = "1.0"
quickcheck_macros = "1.0"
