[package]
name = "inertia-core"
version = "0.3.0"
edition = "2021"
authors = ["William Youmans <wyoumans@usf.edu>"]
description = "Core functionality of the Inertia crate with high level wrappers for FLINT, Arb, and Antic."
homepage = "https://github.com/wjyoumans/inertia-core"
repository = "https://github.com/wjyoumans/inertia-core"
license = "GPL-3.0-or-later" 
keywords = ["flint", "real", "complex", "number-theory", "math"]
categories = ["algorithms", "external-ffi-bindings", "mathematics"]
readme = "README.md"


[features]
default = []
serde = ["dep:serde"]

[dependencies]
libc = "0.2" 
flint-sys = {version = "0.7", features = ["disable-make-check"] }
arb-sys = {version = "0.3", features = ["disable-make-check"] }
antic-sys = {version = "0.3", features = ["disable-make-check"] }

[dependencies.serde]
optional = true
version = "1.0"
features = ["derive"]

[dev-dependencies]
bincode = "1.3"
quickcheck = "1.0"
quickcheck_macros = "1.0"
